# python-exam

./: .env.example  AutoRia Clone.postman_collection.json  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
apps/ads/: models.py  serializers.py
apps/catalog/: models.py  serializers.py  urls.py  views.py
apps/users/: models.py  serializers.py
backend/: manage.py
backend/apps/ads/: filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/ads/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
backend/apps/ads/tests/: test_api.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/catalog/: models.py  serializers.py  urls.py  views.py
backend/apps/catalog/fixtures/: catalog_fixture.json
backend/apps/chat/: apps.py  consumers.py  models.py  routing.py
backend/apps/dealerships/: apps.py  models.py  serializer.py  urls.py  views.py
backend/apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: celery_conf.py  channels_conf.py  jwt_conf.py  rest_conf.py
backend/core/: pagination.py  permissions.py
backend/core/enums/: action_token_enum.py
backend/core/handlers/: error_handler.py
backend/core/middleware/: socket_middleware.py
backend/core/services/: email_service.py  exchange_rates.py  jwt_service.py  statistic_service.py
backend/templates/: manager_alert.html  recovery.html  register.html
configs/: settings.py  urls.py
(+10 files in other folders)
