[project]
name = "python-exam"
version = "0.1.0"
description = ""
authors = [
    {name = "Byl0chkaa",email = "sakalo.vicky@gmail.com"}
]
requires-python = "^3.13"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "django (>=6.0.6,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-celery-beat (>=2.9.0,<3.0.0)",
    "djangochannelsrestframework (>=1.3.0,<2.0.0)",
    "daphne (>=4.2.2,<5.0.0)",
    "channels (>=4.3.2,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "drf-yasg (>=1.21.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)"
]
